# modelowanie

./: README.md
Lista1/: CMakeLists.txt  main.cpp
Lista2/: CMakeLists.txt  main.cpp  test.cpp
Lista3/: CMakeLists.txt  main.cpp
